--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <body>
     <!-- .pf (enter) -->
     <div class="pf">
+        <h1>DAIN DESIGN</h1>
         <!-- div>a>img -->
         <!-- # - 임시링크 -->
         <div><a href="#"><img src="./images/1.jpg" alt="1"></a></div>
