--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <!-- .pf (enter) -->
     <div class="pf">
         <h1>DAIN DESIGN</h1>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap')
+            </style>
         <!-- div>a>img -->
         <!-- # - 임시링크 -->
         <div><a href="#"><img src="./images/1.jpg" alt="1"></a></div>
