--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <style>
         /* 초기화 */
         /* ★ 추가- *는, 전체선택자 -margin바깥여백과 padding안쪽여백 0으로 해주어 여백 초기화*/
+        <style>
+@import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap');
+</style>
         * {
             margin: 0;
             padding: 0;
@@ -48,9 +51,7 @@
     <!-- .pf (enter) -->
     <div class="pf">
         <h1>DAIN DESIGN</h1>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap')
-            </style>
+
         <!-- div>a>img -->
         <!-- # - 임시링크 -->
         <div><a href="#"><img src="./images/1.jpg" alt="1"></a></div>
