--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         /* 초기화 */
         /* ★ 추가- *는, 전체선택자 -margin바깥여백과 padding안쪽여백 0으로 해주어 여백 초기화*/
         <style>
+
 @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap');
-</style>
+
         * {
             margin: 0;
             padding: 0;
@@ -44,6 +45,13 @@
             /*0,0,0,0.3 -검정, 30%투명도*/
             box-sizing: border-box;
         }
+    h1{
+        font-family: "Reddit+Mono", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        margin-bottom: 50px;
+        text-align: center;
+    }
     </style>
 </head>
 
