--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
             box-sizing: border-box;
         }
     h1{
-        font-family: "Reddit+Mono", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        margin-bottom: 50px;
-        text-align: center;
+        font-family: "Reddit Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: 50px;
+  text-align: center;
     }
     </style>
 </head>
