--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         /* 초기화 */
         /* ★ 추가- *는, 전체선택자 -margin바깥여백과 padding안쪽여백 0으로 해주어 여백 초기화*/
+        @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap')
         </style>
 
         * {
